Style: Spacing and display corrections

--- a/src/app/components/big-card/big-card.component.css
+++ b/src/app/components/big-card/big-card.component.css
@@ -1,6 +1,6 @@
 .container__big-card {
   margin-left: 10px;
-  margin-right: 10px;
+  margin-right: 25px;
   width: 400px;
   height: 500px;
   display: flex;
